<resources>
    <string name="app_name">ProtoKot</string>

    <!-- Login -->
    <string name="login_title">"Connexion"</string>
    <string name="creation_title">"Création de compte"</string>
    <string name="field_login">"Identifiant (email)"</string>
    <string name="field_password">"Mot de passe"</string>
    <string name="field_password_confirm">"Confirmer mot de passe"</string>
    <string name="field_firstname">"Prénom"</string>
    <string name="field_lastname">"Nom"</string>
    <string name="login_log_in">"Connexion"</string>
    <string name="create_account">"Créer un compte"</string>
    <string name="error_login_empty">"Veuillez renseigner votre identifiant"</string>
    <string name="error_login_format">"Veuillez vérifier votre identifiant, il ne semble pas s'agir d'un email"</string>
    <string name="error_password_empty">"Veuillez renseigner votre mot de passe"</string>
    <string name="error_password_short">"Veuillez renseigner un mot de passe d'au moins 8 caractères"</string>
    <string name="error_password_digit">"Veuillez renseigner un mot de passe contenant au moins un chiffre"</string>
    <string name="error_password_letter">"Veuillez renseigner un mot de passe contenant au moins une lettre"</string>
    <string name="error_confirm_password">"Les deux mots de passe ne sont pas identiques"</string>
    <string name="error_firstname_empty">"Veuillez renseigner votre prénom"</string>
    <string name="error_lastname_empty">"Veuillez renseigner votre nom"</string>
    <string name="login_running">"Authentification en cours"</string>
    <string name="error_login">"Une erreur est survenue durant l'authentification, veuillez réessayer plus tard"</string>
    <string name="creation_running">"Création de compte en cours"</string>
    <string name="error_creation">"Une erreur est survenue durant la création de votre compte, veuillez réessayer plus tard"</string>

    <!-- Main -->
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Home -->
    <string name="home_title">"Bienvenue à la bibliothèque de Glinin"</string>
    <string name="home_book_button">"Consulter les livres"</string>
    <string name="home_schedule">"Les horaires d'ouverture"</string>
    <string name="home_loading">"Chargement des informations de la bibliothèque"</string>
    <string name="home_error">"Impossible de récupérer les informations de la bibliothèque, veuillez réessayer plus tard"</string>
    <string name="home_schedule_format">"%1$s - %2$s"</string>
    <string name="home_schedule_unknown">"Non communiqué"</string>

    <!-- Book list -->
    <string name="book_cat_all">"Tout"</string>
    <string name="book_borrow">"Emprunter"</string>
    <string name="book_return">"Retourner"</string>
    <string name="book_author_unknown">"Inconnu"</string>

    <!-- Book detail -->
    <string name="book_author">"Auteur"</string>
    <string name="book_publish_date">"Date de parution"</string>
    <string name="book_categories">"Catégories"</string>

    <!-- Profile -->
    <string name="informations">"Informations"</string>
    <string name="user_book_list">"Mes livres"</string>
    <string name="profile_disconnect">"Déconnexion"</string>
    <string name="profile_validate">"Valider les changements"</string>

    <!-- Common -->
    <string name="warning">"Avertissement</string>
    <string name="button_ok">"OK</string>
</resources>
