<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/firstnameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:textColorHint="@android:color/white"
        app:errorTextAppearance="@style/EditTextErrorStyle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/firstnameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_firstname"
            android:inputType="text"
            android:nextFocusDown="@+id/lastnameField"
            android:theme="@style/ProfileEditTextStyle" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lastnameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:textColorHint="@android:color/white"
        app:errorTextAppearance="@style/EditTextErrorStyle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/lastnameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_lastname"
            android:inputType="text"
            android:nextFocusDown="@+id/loginField"
            android:theme="@style/ProfileEditTextStyle" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:textColorHint="@android:color/white"
        app:errorTextAppearance="@style/EditTextErrorStyle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_login"
            android:inputType="text"
            android:nextFocusDown="@+id/passwordField"
            android:theme="@style/ProfileEditTextStyle" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:textColorHint="@android:color/white"
        app:errorTextAppearance="@style/EditTextErrorStyle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:theme="@style/ProfileEditTextStyle" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:textColorHint="@android:color/white"
        app:errorTextAppearance="@style/EditTextErrorStyle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirmPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_password_confirm"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:theme="@style/ProfileEditTextStyle" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/validationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small"
        android:text="@string/profile_validate"
        android:theme="@style/PositiveButton" />

</LinearLayout>