<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/firstnameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small"
        android:layout_marginStart="@dimen/small"
        android:textColorHint="@android:color/black"
        app:errorTextAppearance="@style/EditTextErrorStyle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/firstnameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_firstname"
            android:inputType="text"
            android:nextFocusDown="@+id/lastnameField"
            android:textColor="@android:color/black"
            android:theme="@style/EditTextProfileStyle" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/lastnameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:textColorHint="@android:color/black"
        app:errorTextAppearance="@style/EditTextErrorStyle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/lastnameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_lastname"
            android:inputType="text"
            android:nextFocusDown="@+id/loginField"
            android:textColor="@android:color/black"
            android:theme="@style/EditTextProfileStyle" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/small"
        android:layout_marginStart="@dimen/small"
        android:layout_marginTop="@dimen/small"
        android:textColorHint="@android:color/black"
        app:errorTextAppearance="@style/EditTextErrorStyle">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/loginField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_login"
            android:inputType="text"
            android:nextFocusDown="@+id/passwordField"
            android:textColor="@android:color/black"
            android:theme="@style/EditTextProfileStyle" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/validateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small"
        android:layout_marginEnd="@dimen/small"
        android:layout_marginBottom="@dimen/small"
        android:text="@string/profile_validate"
        android:textAllCaps="false"
        android:theme="@style/NegativeButton" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:indeterminate="true"
        android:visibility="invisible" />

</LinearLayout>
</ScrollView>